--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -203,7 +203,7 @@ Correspondence concerning this article should be addressed to Hu Chuan-Peng, Sch
 \affiliation{\vspace{0.5cm}\textsuperscript{1} Nanjing Normal University, 210024 Nanjing, China\\\textsuperscript{2} Tsinghua University, 100084 Beijing, China\\\textsuperscript{3} University of Aberdeen, Aberdeen, Scotland}
 
 \abstract{%
-Moral character is central to social evaluation and moral judgment. As such, information related to moral character is prioritized in human cognition. This effect is usually explained as a valence effect. Here we report 9 experiments (N = 4XX, trials = XXX) which reveal (1) there is a robust good character prioritization effect in a perceptual matching task, i.e., when neutral geometric shapes were associated with good character, they were prioritized as compared to shapes associated with neutral or bad characters; (2) the prioritization of good character was robust only when the good character referred to the self but weak or non-exist when it referred to others, suggesting a binding effect of the self; (3) the binding between the self and good character exist even when one of them was task-irrelevant. Together, these results provided evidence for spontaneous self-referential processing, i.e., binding the good character with self, as a novel mechanism of the prioritization effect of good character.
+Moral character is central to social evaluation and moral judgment. As such, information related to moral character is prioritized in human cognition. This effect is usually explained as a valence effect. Here we report 9 experiments (data from 404 unique participants) which reveal (1) there is a robust good character prioritization effect in a perceptual matching task, i.e., when neutral geometric shapes were associated with good character, they were prioritized as compared to shapes associated with neutral or bad characters; (2) the prioritization of good character was robust only when the good character referred to the self but weak or non-exist when it referred to others, suggesting a binding effect of the self; (3) the binding between the self and good character exist even when one of them was task-irrelevant. Together, these results provided evidence for spontaneous self-referential processing, i.e., binding the good character with self, as a novel mechanism of the prioritization effect of good character.
 }
 
 
@@ -244,31 +244,31 @@ All participants received informed consent and compensated for their time. These
 \hypertarget{design-and-procedure}{%
 \subsection{Design and Procedure}\label{design-and-procedure}}
 
-This series of experiments studied the perceptual process of moral character, using the social associative learning paradigm (or tagging paradigm, see (Sui, He, \& Humphreys, 2012), in which participants first learned the associations between geometric shapes and labels of person with different moral character (e.g., in first three studies, the triangle, square, and circle and good person, neutral person, and bad person, respectively). The associations of the shapes and label were counterbalanced across participants. After remembered the associations, participants finished a practice phase to familiar with the task, in which they viewed one of the shapes upon the fixation while one of the labels below the fixation and judged whether the shape and the label matched the association they learned. When participants reached 60\% or higher accuracy at the end of the practicing session, they started the experimental task which was the same as in the practice phase.
+This series of experiments used the social associative learning paradigm (or tagging paradigm, see Sui, He, and Humphreys (2012)), in which participants first learned the associations between geometric shapes and labels of person with different moral character (e.g., in first three studies, the triangle, square, and circle and good person, neutral person, and bad person, respectively). The associations of the shapes and label were counterbalanced across participants. After remembered the associations, participants finished a practice phase to familiar with the task, in which they viewed one of the shapes upon the fixation while one of the labels below the fixation and judged whether the shape and the label matched the association they learned. When the overall accuracy reached 60\% or higher at the end of the practicing session, participants proceeded to the experimental task, which was the same as in the practice phase. Otherwise, they will finish another practices session.
 
-The experiment 1a, 1b, 1c, 2, 5, and 6a shared a 2 (matching: match vs.~nonmatch) by 3 (moral character: good vs.~neutral vs.~bad person) within-subject design. Experiment 1a was the first one of the whole series studies and found the prioritization of stimuli associated with good-person. To confirm that it is the moral character that caused the effect, we further conducted experiment 1b, 1c, and 2. More specifically, experiment 1b used different Chinese words as labels to test whether the effect only occurred with certain words. Experiment 1c manipulated the moral valence indirectly: participants first learned to associate different moral behaviors with different Chinese names, after remembered the association, they then performed the perceptual matching task by associating names with different shapes. Experiment 2 further tested whether the way we presented the stimuli influence the effect of valence, by sequentially presenting labels and shapes. Note that part of participants of experiment 2 were from experiment 1a because we originally planned a cross task comparison. Experiment 5 was designed to compare the effect size of moral character and other importance social evaluative dimensions (aesthetics and emotion). Different social evaluative dimensions were implemented in different blocks, the moral character blocks shared the design of experiment 1a. Experiment 6a, which shared the same design as experiment 2, was an EEG experiment which aimed at exploring the neural correlates of the effect. But we will focus on the behavioral results of experiment 6a in the current manuscript.
+Experiment 1a, 1b, 1c, 2, 5, and 6a were design to explore and validate the effect of moral character on perceptual matching. These experiments shared a 2 (matching: match vs.~nonmatch) by 3 (moral character: good vs.~neutral vs.~bad person) within-subject design. Experiment 1a was the first one of the whole series studies, which revealed a prioritization of good character. Experiment 1b, 1c, and 2 followed to confirm that it is the moral character that caused the effect. More specifically, experiment 1b used different Chinese words as labels to test whether the effect only occurred with certain words. Experiment 1c manipulated the moral valence indirectly: participants first learned to associate different moral behaviors with different Chinese names, after remembered the association, they then performed the perceptual matching task by associating names with different shapes. Experiment 2 further tested whether the way we presented the stimuli influence the effect of valence, by sequentially presenting labels and shapes instead of simultaneously. Note that a few participants in experiment 2 also participated experiment 1a because we originally planned a cross task comparison. Experiment 5 was designed to compare the effect size of moral character and other importance social evaluative dimensions (aesthetics and emotion). Different social evaluative dimensions were implemented in different blocks, the moral character blocks shared the design of experiment 1a. Experiment 6a, which shared the same design as experiment 2, was an EEG experiment which aimed at exploring the neural correlates of the effect. But we will focus on the behavioral results of experiment 6a in the current manuscript.
 
-For experiment 3a, 3b, and 6b, we included self-reference as another within-subject variable in the experimental design. For example, the experiment 3a directly extend the design of experiment 1a into a 2 (matching: match vs.~nonmatch) by 2 (reference: self vs.~other) by 3 (moral character: good vs.~neutral vs.~bad) within-subject design. Thus in experiment 3a, there were six conditions (good-self, neutral-self, bad-self, good-other, neutral-other, and bad-other) and six shapes (triangle, square, circle, diamond, pentagon, and trapezoids). The experiment 6b was an EEG experiment based on experiment 3a but presented the label and shape sequentially. Because of the relatively high working memory load (six label-shape pairs), experiment 6b were conducted in two days: the first day participants finished perceptual matching task as a practice, and the second day, they finished the task again while the EEG signals were recorded. We only focus on the first day's data here. Experiment 3b was designed to separate the self-referential trials and other-referential trials. That is, participants finished two different types of block: in the self-referential blocks, they only responded to good-self, neutral-self, and bad-self, with half match trials and half nonmatch trials; in the other-reference blocks, they only responded to good-other, neutral-other, and bad-other.
+Experiment 3a, 3b, and 6b were designed to test whether the prioritization of good person reflect a valence effect or a self-referential effect. To do so, we included self-reference as another within-subject variable. For example, the experiment 3a directly extend the design of experiment 1a into a 2 (matching: match vs.~nonmatch) by 2 (reference: self vs.~other) by 3 (moral character: good vs.~neutral vs.~bad) within-subject design. Thus in experiment 3a, there were six conditions (good-self, neutral-self, bad-self, good-other, neutral-other, and bad-other) and six shapes (triangle, square, circle, diamond, pentagon, and trapezoids). The experiment 6b was an EEG experiment based on experiment 3a but presented the label and shape sequentially. Because of the relatively high working memory load (six label-shape pairs), experiment 6b were conducted in two days: the first day participants finished perceptual matching task as a practice, and the second day, they finished the task again while the EEG signals were recorded. We only focus on the first day's data here. Experiment 3b was designed to separate the self-referential trials and other-referential trials. That is, participants finished two different types of block: in the self-referential blocks, they only responded to good-self, neutral-self, and bad-self, with half match trials and half nonmatch trials; in the other-reference blocks, they only responded to good-other, neutral-other, and bad-other.
 
-Experiment 4a and 4b were design to explore the mechanism underlying the prioritization of good-self. In 4a, we only used two labels (self vs.~other) and two shapes (circle, square). To manipulate the moral character, we added the moral-related words within the shape and instructed participants to ignore the words in the shape during the task. In 4b, we reversed the role of self-reference and moral character in the task: participant learned three labels (good-person, neutral-person, and bad-person) and three shapes (circle, square, and triangle), and the words related to identity, ``self'' or ``other'', were presented in the shapes. As in 4a, participants were told to ignore the words inside the shape during the task.
+Experiment 4a and 4b were design to further test the self-referential process in the prioritization of good-person. In 4a, we only used two labels (self vs.~other) and two shapes (circle, square). To manipulate the moral character, we presented moral-related words within shapes and instructed participants to ignore the words in shapes during the task. In 4b, we reversed the role of self-reference and moral character: participant learned three labels (good-person, neutral-person, and bad-person) and three shapes (circle, square, and triangle), and the words related to identity, ``self'' or ``other'', were presented in shapes. As in 4a, participants were told to ignore the words inside the shape during the task.
 
 E-prime 2.0 was used for presenting stimuli and collecting behavioral responses. For participants recruited in Tsinghua University, they finished the experiment individually in a dim-lighted chamber, stimuli were presented on 22-inch CRT monitors and their head were fixed by a chin-rest brace. The distance between participants' eyes and the screen was about 60 cm. The visual angle of geometric shapes was about \(3.7^\circ × 3.7^\circ\), the fixation cross is of \(0.8^\circ × 0.8^\circ\) visual angle at the center of the screen. The words were of \(3.6^\circ\) × \(1.6^\circ\) visual angle. The distance between the center of the shape or the word and the fixation cross was \(3.5^\circ\) of visual angle. For participants recruited in Wenzhou University, they finished the experiment in a group consisted of 3 \textasciitilde{} 12 participants in a dim-lighted testing room. Participants were required to finished the whole experiment independently. Also, they were instructed to start the experiment at the same time, so that the distraction between participants were minimized. The stimuli were presented on 19-inch CRT monitor. The visual angles are could not be exactly controlled because participants' chin were not fixed.
 
-In most of these experiments, participant were also asked to fill a battery of questionnaire after they finish the behavioral tasks. All the questionnaire data are open (see, dataset 4 in Liu et al., 2020). See Table S1 for a summary information about all the experiments.
+In most of these experiments, participant were also asked to fill a battery of questionnaire after they finish the behavioral tasks. All the questionnaire data were open (see, dataset 4 in Liu et al., 2020). See Table S1 for a summary information about all the experiments.
 
 \hypertarget{data-analysis}{%
 \subsection{Data analysis}\label{data-analysis}}
 
-We used the \texttt{tidyverse} of r (see script \texttt{Load\_save\_data.r}) to preprocess the data. Results of each experiment were then analyzed using Bayesian hierarchical models.
+We used the \texttt{tidyverse} of r (see script \texttt{Load\_save\_data.r}) to preprocess the data. Results of all experiments were then analyzed using Bayesian hierarchical models.
 
-We used the Bayesian hierarchical model (BHM, or Bayesian generalized linear mixed models, Bayesian multilevel models) to model the reaction time and accuracy data, because BHM provided three advantages over the classic NHST approach (repeated measure ANOVA or \emph{t}-tests): first, BHM estimate the posterior distributions of parameters for statistical inference, therefore provided uncertainty in estimation (Rouder \& Lu, 2005). Second, BHM, where generalized linear mixed models could be easily implemented, can use distributions that fit the distribution of real data instead of using normal distribution for all data. Using appropriate distributions for the data will avoid misleading results and provide better fitting of the data. For example, Reaction times are not normally distributed but right skewed, and the linear assumption in ANOVAs is not satisfied (Rousselet \& Wilcox, 2019). Third, BHM provided an unified framework to analyze data from different levels and different sources, avoid the information loss when we need to combine data from different levels.
+We used the Bayesian hierarchical model (BHM, or Bayesian generalized linear mixed models, Bayesian multilevel models) to model the reaction time and accuracy data, because BHM provided three advantages over the classic NHST approach (repeated measure ANOVA or \emph{t}-tests). First, BHM estimates the posterior distributions of parameters for statistical inference, therefore provided uncertainty in estimation (Rouder \& Lu, 2005). Second, BHM, where generalized linear mixed models could be easily implemented, can use distributions that fit the distribution of real data instead of using normal distribution for all data. Using appropriate distributions for the data will avoid misleading results and provide better fitting of the data. For example, Reaction times are not normally distributed but right skewed, and the linear assumption in ANOVAs is not satisfied (Rousselet \& Wilcox, 2019). Third, BHM provides an unified framework to analyze data from different levels and different sources, avoid the information loss when we need to combine data from different levels.
 
-We used the \texttt{r} package \texttt{BRMs} (\textbf{Bürkner\_2017?}), which used Stan (Carpenter et al., 2017) for the BHM analyses. We estimated the over-all effect across experiments with similar experimental design, instead of using a two-step approach where we first estimate parameters, e.g., \(d'\) for each participant, and then use a random effect model meta-analysis to synthesize the effect (Goh, Hall, \& Rosenthal, 2016).
+We used the \texttt{r} package \texttt{BRMs} (\textbf{Bürkner\_2017?}), which used Stan (Carpenter et al., 2017) for the BHM analyses. We estimated the over-all effect across experiments with similar experimental design, instead of using a two-step approach where we first estimate parameters, e.g., \(d'\) for each participant, and then use a random effect model meta-analysis to synthesize the effect (e.g., Goh, Hall, \& Rosenthal, 2016).
 
 \hypertarget{accuracy}{%
 \subsubsection{Accuracy}\label{accuracy}}
 
-We followed practice of previous studies (Hu, Lan, Macrae, \& Sui, 2020; Sui et al., 2012) and used signal detection theory approach to analyze the accuracy data. More specifically, the match trials are treated as signal and the non-match trials are noise. As we mentioned above, we estimated the sensitivity and criterion of SDT by BHM (Rouder \& Lu, 2005). Because the BHM can model different level's data using a single unified model, we used a three-level HBM to model the moral character effect, which include five experiments: 1a, 1b, 1c, 2, 5, and 6a. Similarly, we modeled experiments with both self-referential and moral character with a three-level HBM model, which includes 3a, 3b, and 6b. For experiment 4a and 4b, we used two-level models for each separately. However, we could compare the posterior of parameters directly because we have full posterior distribution of parameters.
+We followed previous studies (Hu, Lan, Macrae, \& Sui, 2020; Sui et al., 2012) and used signal detection theory approach to analyze the accuracy data. More specifically, the match trials are treated as signal and the non-match trials are noise. The sensitivity and criterion of signal detection theory by BHM (Rouder \& Lu, 2005). Because the BHM can model different level's data using a single unified model, we used a three-level HBM to model prioritization effect of good-person, which include data from five experiments: 1a, 1b, 1c, 2, 5, and 6a. Similarly, we modeled experiments with both self-referential and moral character with a three-level HBM model, which includes 3a, 3b, and 6b. For experiment 4a and 4b, we used two-level models for each separately. However, we could compare the posterior of parameters directly because we have full posterior distribution of parameters.
 
 We used the Bernoulli distribution to model the accuracy data. For a single participant, we assume that the accuracy of \(i\)th trial is Bernoulli distributed (binomial with 1 trial), with probability \(p_{i}\) that \(y_{i} = 1\).
 
@@ -328,7 +328,7 @@ in which \(mu_{0}\) and \(mu_{1}\) means the population level parameter.
 \hypertarget{reaction-times}{%
 \subparagraph{Reaction times}\label{reaction-times}}
 
-For the reaction time, we used the log normal distribution (\url{https://lindeloev.github.io/shiny-rt/\#34_(shifted)_log-normal}) to model the data. This means that we need to estimate the posterior of two parameters: \(\mu\), \(\sigma\). \(\mu\) is the mean of the \texttt{logNormal} distribution, and \(\sigma\) is the disperse of the distribution. Although the log normal distribution can be extended to shifted log normal distribution, with one more parameter: shift, which is the earliest possible response, we found that the additional parameter didnt' improved the model fitting and therefore used the logNormal in our final analysis.
+For the reaction time, we used the log normal distribution (\url{https://lindeloev.github.io/shiny-rt/\#34_(shifted)_log-normal}) to model the data. This means that we need to estimate the posterior of two parameters: \(\mu\), \(\sigma\). \(\mu\) is the mean of the \texttt{logNormal} distribution, and \(\sigma\) is the disperse of the distribution. Although the log normal distribution can be extended to shifted log normal distribution, with one more parameter: shift, which is the earliest possible response, we found that the additional parameter didnt' improved the model fitting and therefore used the log nomral in our final analysis.
 
 The reaction time of the \(j\)th subject on \(i\)th trial is a linear function of trial type: \[y_{ij} = \beta_{0j} + \beta_{1j}*IsMatch_{ij} * Valence_{ij}\]
 
@@ -336,9 +336,14 @@ while the log of the reaction time is log-normal distributed:
 \[ log(y_{ij}) \sim N(\mu_{j}, \sigma_{j})\]
 \(y_{ij}\) is the RT of the \(i\)th trial of the \(j\)th participants.
 
-\[\mu_{j} \sim N(\mu, \sigma)\]
+\[\mu_{j} = \beta_{0j} + \beta_{1j}*IsMatch_{ij} * Valence_{ij}\]
+\[ \begin{bmatrix}\beta_{0j}\\
+\beta_{1j}\\
+\end{bmatrix} \sim N(\begin{bmatrix}\theta_{0}\\
+\theta_{1}\\
+\end{bmatrix}, \sum) \]
 
-\[\sigma_{j} \sim Cauchy()\]
+\[\sigma_{j} \sim HalfCauchy()\]
 Formula used for modeling the data as follow:
 
 \texttt{RT\_sec\ \textasciitilde{}\ Valence*ismatch\ +\ (Valence*ismatch\ \textbar{}\ Subject),\ family\ =\ lognormal()}
@@ -353,27 +358,30 @@ we expanded the RT model three-level model in which participants and experiments
 
 \(y_{ijk}\) is the RT of the \(i\)th trial of the \(j\)th participants in the \(k\)th experiment.
 
-\[\mu_{jk} \sim N(\mu_{k}, \sigma_{k})\]
-\[\sigma_{jk} \sim Cauchy()\]
-\[\mu_{k} \sim N(\mu, \sigma)\]
-\[\theta_{k} \sim Cauchy()\]
+\[\log(y_{ijk}) \sim N(\mu_{jk}, \sigma_{jk})\]
+\[\sigma_{jk} \sim HalfCauchy()\]
+\[\mu_{jk} = \beta_{0jk} + \beta_{1jk}*IsMatch_{ijk} * Valence_{ijk} \]
+\[\beta_{jk} \sim N(\mu_{j}, \sigma_j)\]
 
-\hypertarget{prioritization-of-good-character}{%
-\subsubsection{Prioritization of good character}\label{prioritization-of-good-character}}
+\[\mu_j \sim N(\mu, \sigma)\]
+\[\sigma_j \sim HN(\sigma_{\sigma})\]
 
-We estimated the effect size of \(d'\) and RT from experiment 1a, 1b, 1c, 2, 5, and 6a for the effect of moral character. We reported fixed effect of three-level BHM that included all experiments that tested the valence effect.
+\hypertarget{prioritization-of-good-person}{%
+\subsubsection{Prioritization of good person}\label{prioritization-of-good-person}}
 
-\hypertarget{prioritization-of-good-character-is-modulated-by-self-referential}{%
-\subsubsection{Prioritization of good character is modulated by self-referential}\label{prioritization-of-good-character-is-modulated-by-self-referential}}
+We estimated the effect size of \(d'\) and RT from experiment 1a, 1b, 1c, 2, 5, and 6a for the prioritization of good person. We reported fixed effect of three-level BHM that included all experiments that tested the valence effect.
 
-We also estimated the interaction between moral character and self-referential process, which included results from experiment 3a, 3b, and 6b. Using three-level models, we tested two possible explanations for the prioritization of good character: value-based or social categorization based prioritization.
+\hypertarget{prioritization-of-good-person-is-modulated-by-self-referential}{%
+\subsubsection{Prioritization of good person is modulated by self-referential}\label{prioritization-of-good-person-is-modulated-by-self-referential}}
 
-\hypertarget{spontaenous-binding-between-self-and-good-character}{%
-\subsubsection{Spontaenous binding between self and good character}\label{spontaenous-binding-between-self-and-good-character}}
+We also estimated the interaction between moral character and self-referential process, which included results from experiment 3a, 3b, and 6b. Using three-level models, we tested two possible explanations for the prioritization of good character: valence effect or self-referential based prioritization.
+
+\hypertarget{spontaenous-binding-between-self-and-good-person}{%
+\subsubsection{Spontaenous binding between self and good person}\label{spontaenous-binding-between-self-and-good-person}}
 
 In the third part, we focused on experiment 4a and 4b, which were designed to examine two more nuanced explanation concerning the good-self. The design of experiment 4a and 4b are complementary. Together, they can test whether participants are more sensitive to the moral character of the Self (4a), or the identity of the good character (4b).
 
-We did not analyze the questionnaire data, which were described in (Liu et al., 2020).
+We only reported the subjective distance between different persons, and did not analyze other questionnaire data, which were described in (Liu et al., 2020).
 
 \hypertarget{results}{%
 \section{Results}\label{results}}
